--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,9 @@
 [package]
-name = "wasm-rust-compiler"
+name = "cart"
 version = "0.1.0"
 edition = "2021"
 
 [dependencies]
 thiserror = "1.0.61"
 inkwell = { version = "0.5.0", features = ["llvm18-0"] }
+clap = { version = "4.3", features = ["derive"] }
