--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,14 @@ edition = "2021"
 
 [dependencies]
 thiserror = "1.0.61"
-inkwell = { version = "0.5.0", features = ["llvm18-0"] }
 clap = { version = "4.3", features = ["derive"] }
+inkwell = { version = "0.5.0", features = ["llvm18-0"] }
+
+[[bin]]
+name = "cart"
+path = "src/main.rs"
+
+[lib]
+name = "cartstd"
+path = "src/cart_std/lib.rs"
+crate-type = ["staticlib"]
