--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 thiserror = "1.0.61"
 clap = { version = "4.3", features = ["derive"] }
 inkwell = { version = "0.5.0", features = ["llvm18-0"] }
+va_list = "0.2.0"
 
 [[bin]]
 name = "cart"
